<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".LocationOwner.retailer_dashboard_Activity">
    <!-- TODO: Update blank fragment layout -->



    <TextView
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/language"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_language" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/lang_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:text="@string/arabic"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="MissingClass,UseSwitchCompatOrMaterialXml" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/themes"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_themes" />
    

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dark"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="MissingClass, UseSwitchCompatOrMaterialXml" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/notifications"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_notif" />

        <Spinner
            android:id="@+id/spi_notifications"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="130dp"
            android:layout_marginEnd="-50dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

    </LinearLayout>


    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_fingerprint"
        android:text="@string/fingerprint_lock"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/add_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_adduser"
            android:text="@string/add_user"
            android:textColor="@color/white"
            android:background="@color/background"
             />




    </LinearLayout>


</LinearLayout>